--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       "email": "2664671146@qq.com"
     }
   ],
-  "homepage": "http://www.418412.com/",
+  "homepage": "https://www.418412.com/",
   "license": "MIT",
   "require": {
     "php": ">=5.3.0"
